<resources>
    <string name="app_name">YellowCard</string>
    <string name="title_activity_app_info_screen">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <!--Strings related to Welcome Screen -->
    <string name="welcomeAppName">Maintenance Activity Card</string>
    <string name="welcomeMsg">Welcome to Yellow Card</string>
    <string name="welcomeInfo">Use this app to document service referrals \nand other deficiencies in the field.</string>
    <string name="dontAskAgain">Don\'t show this again</string>
    <string name="documentConditions">Document conditions</string>
    <string name="includeInfo">Include relevant info</string>
    <string name="reviewSubmit">Review and submit</string>
    <string name="whatIsIrestore">What is iRestore?</string>
    <string name="title_activity_dashboard_screen">DashboardScreen</string>
    <string name="title_activity_main2">Main2Activity</string>


    <!--Strings related to submit new card Screen -->
    <string name="responsibleParty">Responsible Party*</string>
    <string name="problemType">Problem Type*</string>
    <string name="priority">Priority</string>

    <!--Strings related to submit new card Screen -->

    <string name="preference_file_key">yellowCardPreferences</string>

    <string-array name="navigation_drawer_items_array">
        <item>Connect</item>
        <item>Fixtures</item>
        <item>Table</item>
    </string-array>
</resources>
