<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="100"
    android:gravity="center"
    android:layout_gravity="center"
    android:background="@color/yellow"
    android:orientation="vertical">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:layout_marginTop="10dp"
        android:src="@mipmap/logo"/>

    <LinearLayout
        android:layout_weight="75"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:background="@color/white"
        android:layout_height="0dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_weight="5"
            android:layout_marginTop="20dp"
            android:id="@+id/welcomeMsg"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:textColor="@color/greenColor"
            android:text="@string/welcomeMsg"
            android:textSize="20sp"
            android:layout_height="0dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_weight="10"
            android:id="@+id/appInfo"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/welcomeInfo"
            android:textColor="@color/textColorLight"
            android:textSize="14sp"
            android:layout_height="0dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_weight="5"
            android:id="@+id/usageInstructions"
            android:layout_gravity="center"
            android:text="Usage Instructions"
            android:textColor="@color/textColor"
            android:textStyle="bold"
            android:textSize="14sp"
            android:layout_height="0dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="10">
            <ImageView
                android:id="@+id/welcomeCamera"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:src="@mipmap/welcome_camera"/>
            <TextView
                android:id="@+id/docConditions"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textColor="@color/textColorLight"
                android:layout_gravity="center"
                android:layout_toRightOf="@+id/welcomeCamera"
                android:text="@string/documentConditions"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            android:layout_weight="10">
            <ImageView
                android:id="@+id/welcomeInfo"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:src="@mipmap/welcome_info"/>
            <TextView
                android:id="@+id/relInfo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_gravity="center"
                android:textColor="@color/textColorLight"
                android:layout_toRightOf="@+id/welcomeInfo"
                android:text="@string/includeInfo"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            android:layout_weight="10">
            <ImageView
                android:id="@+id/welcomeReview"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:src="@mipmap/welcome_review"/>
            <TextView
                android:id="@+id/review"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:textColor="@color/textColorLight"
                android:layout_toRightOf="@+id/welcomeReview"
                android:text="@string/reviewSubmit"/>
        </LinearLayout>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:background="#ffffff"
            android:src="@mipmap/start"
            android:id="@+id/startButton"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"

            />
        <CheckBox
            android:layout_width="wrap_content"
            android:text="@string/dontAskAgain"
            android:textSize="16sp"
            android:layout_weight="10"
            android:layout_gravity="center"
            android:id="@+id/dontShowAgainChkBox"
            android:textColor="#999999"
            android:layout_height="0dp" />
    </LinearLayout>
    <TextView

        android:layout_width="wrap_content"
        android:layout_weight="5"
        android:id="@+id/iRestoreInfoBtn"
        android:text="@string/whatIsIrestore"
        android:textSize="14sp"
        android:textColor="@color/textColorLight"
        android:layout_height="0dp" />
    </LinearLayout>